wordcloud and rougue

--- a/fileupload/templates/fileupload/input.html
+++ b/fileupload/templates/fileupload/input.html
@@ -14,6 +14,10 @@
     </div>
   </nav>
 <br>
+<div>
+  <h4>Use the below site to record Audio (Click on the Mic Icon when the you start the meeting and Click it again when you end the meeting then copy the output to the clipboard) and paste the Meeting transcript below</h4>
+  <a href="https://www.google.com/intl/en/chrome/demos/speech.html">Click me to convert the meeting Audio to text !!</a>
+</div>
 <div class="row">
   <div class='col s2'>
   </div>
