--- a/fileupload/templates/fileupload/output.html
+++ b/fileupload/templates/fileupload/output.html
@@ -31,6 +31,33 @@
 </div>
 </br>
 </div>
+<div class="row">
+    <div class="col s2">
+
+    </div>
+    <div class="input-field col s8">
+        <div class="card blue-grey darken-2n">
+        <div class="card-content white-text">
+          <span class="card-title">Summary Using Bert Model</span>
+<p>
+    {{bert_output}}
+</p>
+ 
+</div>
+</div>
+</div>
+</br>
+</div>
+<div class="row">
+  <div class="col s4"></div>
+<h4 class="col s5">WordCloud of All The Words</h4>
+</div>
+<div class="row">
+  <div class="col s2"></div>
+  <div class="col s8">
+    <img src="{% static 'image.png'%}">
+</div>    
+</div>
 <footer class="page-footer grey lighten-1">
     <br>
     <div class="container">   
