--- a/fileupload/templates/fileupload/output.html
+++ b/fileupload/templates/fileupload/output.html
@@ -31,7 +31,7 @@
 </div>
 </br>
 </div>
-<div class="row">
+<!-- <div class="row">
     <div class="col s2">
 
     </div>
@@ -47,8 +47,8 @@
 </div>
 </div>
 </br>
-</div>
-<div class="row">
+</div> -->
+<!-- <div class="row">
   <div class="col s4"></div>
 <h4 class="col s5">WordCloud of All The Words</h4>
 </div>
@@ -57,7 +57,10 @@
   <div class="col s8">
     <img src="{% static 'image.png'%}">
 </div>    
-</div>
+</div> -->
+<a href="/analysis">
+  Click Here To Analyze Your output.
+</a>
 <footer class="page-footer grey lighten-1">
     <br>
     <div class="container">   
