--- a/fileupload/templates/fileupload/analysis.html
+++ b/fileupload/templates/fileupload/analysis.html
@@ -16,7 +16,7 @@
 <br>
 </div>
 </div>
-<div class="row">
+<!-- <div class="row">
   <div class="col s4"></div>
 <h4 class="col s5">WordCloud of All The Words</h4>
 </div>
@@ -25,7 +25,7 @@
   <div class="col s8">
     <img src="{% static 'image.png'%}">
 </div>    
-</div>
+</div> -->
 <div class="row">
     <div class="col s2">
     </div>
@@ -56,7 +56,7 @@
 </div>
 </br>
 </div>
-<div class="row">
+<!-- <div class="row">
     <div class="col s2">
     </div>
     <div class="input-field col s8">
@@ -70,4 +70,5 @@
 </div>
 </div>
 </br>
-</div>
+</div> -->
+{% endblock %}
