--- a/fileupload/templates/fileupload/output.html
+++ b/fileupload/templates/fileupload/output.html
@@ -48,7 +48,7 @@
 </div>
 </br>
 </div> -->
-<!-- <div class="row">
+<div class="row">
   <div class="col s4"></div>
 <h4 class="col s5">WordCloud of All The Words</h4>
 </div>
@@ -57,7 +57,22 @@
   <div class="col s8">
     <img src="{% static 'image.png'%}">
 </div>    
-</div> -->
+</div>
+<div class="row">
+    <div class="col s2">
+    </div>
+    <div class="input-field col s8">
+        <div class="card blue-grey darken-2n">
+        <div class="card-content white-text">
+          <span class="card-title">Rouge Score is</span>
+<p>
+    {{rouge_output}}
+</p>
+</div>
+</div>
+</div>
+</br>
+</div>
 <a href="/analysis">
   Click Here To Analyze Your output.
 </a>
