--- a/fileupload/templates/fileupload/analysis.html
+++ b/fileupload/templates/fileupload/analysis.html
@@ -41,7 +41,7 @@
 </div>
 </br>
 </div>
-<div class="row">
+<!-- <div class="row">
     <div class="col s2">
     </div>
     <div class="input-field col s8">
@@ -55,7 +55,7 @@
 </div>
 </div>
 </br>
-</div>
+</div> -->
 <!-- <div class="row">
     <div class="col s2">
     </div>
