--- a/fileupload/templates/fileupload/output.html
+++ b/fileupload/templates/fileupload/output.html
@@ -59,6 +59,16 @@
 </div>    
 </div>
 <div class="row">
+  <div class="col s4"></div>
+<h4 class="col s5">Histogram !</h4>
+</div>
+<div class="row">
+  <div class="col s2"></div>
+  <div class="col s8">
+    <img src="{% static 'histogram.png'%}">
+</div>    
+</div>
+<div class="row">
     <div class="col s2">
     </div>
     <div class="input-field col s8">
@@ -73,9 +83,13 @@
 </div>
 </br>
 </div>
+<div class="row">
+  <div class="col s5">
+  </div>
 <a href="/analysis">
   Click Here To Analyze Your output.
 </a>
+</div>
 <footer class="page-footer grey lighten-1">
     <br>
     <div class="container">   
