--- a/employee/templates/employee/dashboard.html
+++ b/employee/templates/employee/dashboard.html
@@ -113,7 +113,7 @@
                                       </div>
                                   </li>
                                   <li class="caption-content">
-                                      <a href="#" class="search-toggle dropdown-toggle d-flex align-items-center" id="dropdownMenuButton3" data-toggle="dropdown"
+                                      <a href="/profile/{{con.name}}/" class="search-toggle dropdown-toggle d-flex align-items-center" id="dropdownMenuButton3" data-toggle="dropdown"
                                           aria-haspopup="true" aria-expanded="false">
                                           <img src="{% static 'images/03.jpg' %}" class="avatar-40 img-fluid rounded" alt="user">
                                           <div class="caption ml-3">
@@ -173,7 +173,7 @@
                             <input type="text" class="text search-input" placeholder="Search...">
                         </form>
                     </div>
-                    <div class="float-sm-right"><a href="page-new-event.html" class="btn btn-primary pr-5 position-relative" style="height: 40px;">Add Event<span class="event-add-btn" style="height: 40px;"><i class="ri-add-line"></i></span></a></div>
+                    <div class="float-sm-right"><a href="/scheduler/{{con.id}}" class="btn btn-primary pr-5 position-relative" style="height: 40px;">Add Event<span class="event-add-btn" style="height: 40px;"><i class="ri-add-line"></i></span></a></div>
                 </div>
             </div>    
         </div>
