--- a/employee/templates/employee/dashboard.html
+++ b/employee/templates/employee/dashboard.html
@@ -183,20 +183,22 @@
             <div class="col-lg-12">                
                 <div class="event-content">
                     <div id="event1" class="tab-pane fade active show">
-                        <div class="row">                                
+                        <div class="row">
+                            {% for event in all %}                              
                             <div class="col-lg-4 col-md-6">
                                 <div class="card card-block card-stretch card-height">
                                     <div class="card-body rounded event-detail event-detail-danger disabled">
                                         <div class="d-flex align-items-top justify-content-between">
                                             <div>
-                                                <h4 class="mb-2 mr-4">Reminder of App Project And Design</h4>                                        
-                                                <p class="mb-2 text-danger font-weight-500 text-uppercase"><i class="las la-user pr-2"></i>One On One</p>
-                                                <p class="mb-4 card-description">Calendify always allows you to set the reminder to optimize task management roles and jobs.</p>
+                                                <h4 class="mb-2 mr-4">{{event.title}}</h4>                                        
+                                                <p class="mb-2 text-danger font-weight-500 text-uppercase"><i class="las la-user pr-2"></i>Group</p>
+                                                <p class="mb-4 card-description">{{event.summary}}</p>
                                                 <div class="d-flex align-items-center pt-4">
-                                                    <a href="#" class="btn btn-danger mr-3 px-xl-4">50 Min</a>
-                                                    <a href="#" class="btn btn-outline-danger copy d-none px-xl-4" data-extra-toggle="copy" title="Copy to clipboard" data-toggle="tooltip"><i class="las la-link pr-2"></i>Copy Link</a>
+                                                    <a href="#" class="btn btn-danger mr-3 px-xl-4">{{event.end_time }} : {{event.start_time}}</a>
+                                                    <a href="{{event.link}}" class="btn btn-outline-danger copy d-none px-xl-4" data-extra-toggle="copy" title="Copy to clipboard" data-toggle="tooltip"><i class="las la-link pr-2"></i>Copy Link</a>
                                                     <a href="#" class="btn btn-outline-danger turn-on px-xl-4">Turn On</a>
                                                 </div>
+                                                <a href="../../speech/" class= "mb-2 btn btn-outline-danger copy d-none px-xl-4" >Summarize The Meeting</a>
                                             </div>
                                             <div class="card-header-toolbar mt-1">
                                                 <div class="dropdown d-none">
@@ -225,7 +227,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6">
+                            {% endfor %}
+                            <!-- <div class="col-lg-4 col-md-6">
                                 <div class="card card-block card-stretch card-height">
                                     <div class="card-body rounded event-detail event-detail-info">
                                         <div class="d-flex align-items-top justify-content-between">
@@ -386,8 +389,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
+                                    </div> -->
+                                <!-- </div> -->
                             </div>
                         </div>
                     </div>
