--- a/employee/templates/employee/dashboard.html
+++ b/employee/templates/employee/dashboard.html
@@ -198,7 +198,7 @@
                                                     <a href="{{event.link}}" class="btn btn-outline-danger copy d-none px-xl-4" data-extra-toggle="copy" title="Copy to clipboard" data-toggle="tooltip"><i class="las la-link pr-2"></i>Copy Link</a>
                                                     <a href="#" class="btn btn-outline-danger turn-on px-xl-4">Turn On</a>
                                                 </div>
-                                                <a href="../../speech/" class= "mb-2 btn btn-outline-danger copy d-none px-xl-4" >Summarize The Meeting</a>
+                                                <a href="../../../speech/1/" class= "mb-2 btn btn-outline-danger copy d-none px-xl-4" >Summarize The Meeting</a>
                                             </div>
                                             <div class="card-header-toolbar mt-1">
                                                 <div class="dropdown d-none">
