--- a/fileupload/templates/fileupload/output.html
+++ b/fileupload/templates/fileupload/output.html
@@ -10,7 +10,13 @@
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Navbar Link</a></li>
       </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">Menu</i></a>
+      <ul id="nav-mobile" class="sidenav">
+        <li> <a href="../../dashboard/1/" data-target="nav-mobile" class="sidenav-trigger">Dashboard</a></li>
+      </ul>
+      <ul id="nav-mobile" class="sidenav">
+        <li> <a href="../../welcome/" data-target="nav-mobile" class="sidenav-trigger">About Us</a></li>
+      </ul>
     </div>
   </nav>
 <br>
