--- a/employee/templates/employee/scheduler.html
+++ b/employee/templates/employee/scheduler.html
@@ -11,7 +11,47 @@
       <link rel="stylesheet"  href="{% static 'css/backend.minf700.css' %}"  type="text/css">
       <link rel="stylesheet" href="{% static 'css/all.min.css' %}"  type="text/css">
       <link rel="stylesheet"  href="{% static 'css/line-awesome.min.css' %}"  type="text/css">
-      <link rel="stylesheet" href="{% static 'css/remixicon.css' %}" type="text/css"> 
+      <link rel="stylesheet" type="text/css" href="/static/admin/css/base.css">
+      <script src="{% url 'js-catlog' %}"></script>
+    <script src="{% static '/admin/js/core.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'admin/css/widgets.css' %}">
+    <link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css">
+    <script type="text/javascript" src="/admin/jsi18n/"></script>
+    <script type="text/javascript" src="/static/admin/js/vendor/jquery/jquery.js"></script>
+
+    <script type="text/javascript" src="/static/admin/js/calendar.js"></script>
+
+    <script type="text/javascript" src="/static/admin/js/jquery.init.js"></script>
+
+    <script type="text/javascript" src="/static/admin/js/admin/DateTimeShortcuts.js"></script>
+
+    <script type="text/javascript" src="/static/admin/js/core.js"></script>
+
+    <script type="text/javascript" src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
+
+    <script type="text/javascript" src="/static/admin/js/actions.js"></script>
+
+    <script type="text/javascript" src="/static/admin/js/urlify.js"></script>
+
+    <script type="text/javascript" src="/static/admin/js/prepopulate.js"></script>
+
+    <script type="text/javascript" src="/static/admin/js/vendor/xregexp/xregexp.js"></script>
+
+    
+
+    
+
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+        <link rel="stylesheet" type="text/css" href="/static/admin/css/responsive.css">
+
+        
+
+    
+
+    <meta name="robots" content="NONE,NOARCHIVE">
+
 </head>
   <body class=" ">
     <!-- loader Start -->
@@ -26,7 +66,7 @@
          <div class="container h-100">
             <div class="row justify-content-center align-items-center height-self-center">
                <div class="col-md-5 col-sm-12 col-12 align-self-center">
-                  <div class="card">
+                  <!-- <div class="card"> -->
                      <div class="card-body text-center">
                         <h2>Create A Meeting</h2>
                         <p>Invite All Participants.</p>
@@ -59,6 +99,7 @@
                            <p class="mt-3">
                               Create an Account <a href="auth-sign-up.html" class="text-primary">Sign Up</a>
                            </p> -->
+                           <!-- {{form.media}} -->
                            {{form.as_p}}
                            <button type="submit" class="btn btn-primary">Create Meeting</button>
                         </form>
