--- a/fileupload/templates/fileupload/output.html
+++ b/fileupload/templates/fileupload/output.html
@@ -11,15 +11,23 @@
         <li><a href="#">Navbar Link</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">Menu</i></a>
-      <ul id="nav-mobile" class="sidenav">
+      <!-- <ul id="nav-mobile" class="sidenav">
         <li> <a href="../../dashboard/1/" data-target="nav-mobile" class="sidenav-trigger">Dashboard</a></li>
       </ul>
       <ul id="nav-mobile" class="sidenav">
         <li> <a href="../../welcome/" data-target="nav-mobile" class="sidenav-trigger">About Us</a></li>
-      </ul>
+      </ul> -->
     </div>
   </nav>
 <br>
+<!-- <div>
+  <ul id="nav-mobile" class="sidenav">
+        <li> <a href="../../dashboard/{{mid}}/" data-target="nav-mobile" class="sidenav-trigger">Dashboard</a></li>
+      </ul>
+      <ul id="nav-mobile" class="sidenav">
+        <li> <a href="../../welcome/" data-target="nav-mobile" class="sidenav-trigger">About Us</a></li>
+      </ul>
+</div> -->
 <div class="row">
     <div class="col s2">
 
