--- a/employee/templates/employee/dashboard.html
+++ b/employee/templates/employee/dashboard.html
@@ -203,7 +203,7 @@
                                                 <p class="mb-2 text-danger font-weight-500 text-uppercase"><i class="las la-user pr-2"></i>Group</p>
                                                 <p class="mb-4 card-description">{{event.summary}}</p>
                                                 <div class="d-flex align-items-center pt-4">
-                                                    <a href="#" class="btn btn-danger mr-3 px-xl-4">{{event.end_time }} : {{event.start_time}}</a>
+                                                    <a href="#" class="btn btn-danger mr-3 px-xl-4">{{event.date}} => {{event.end_time }} : {{event.start_time}}</a>
                                                     <!-- <span id='link'>{{event.link}}</span> -->
                                                     <a onclick="CopyToClipboard('link')" ;return false; class="btn btn-outline-danger copy d-none px-xl-4" data-extra-toggle="copy" title="Copy to clipboard" data-toggle="tooltip"><i class="las la-link pr-2"></i>Copy Link</a>
                                                     <a href="#" class="btn btn-outline-danger turn-on px-xl-4">Turn On</a>
