--- a/employee/templates/employee/scheduler.html
+++ b/employee/templates/employee/scheduler.html
@@ -16,7 +16,7 @@
     <script src="{% static '/admin/js/core.js' %}"></script>
     <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
     <link rel="stylesheet" href="{% static 'admin/css/widgets.css' %}">
-    <link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css">
     <script type="text/javascript" src="/admin/jsi18n/"></script>
     <script type="text/javascript" src="/static/admin/js/vendor/jquery/jquery.js"></script>
 
@@ -36,7 +36,7 @@
 
     <script type="text/javascript" src="/static/admin/js/prepopulate.js"></script>
 
-    <script type="text/javascript" src="/static/admin/js/vendor/xregexp/xregexp.js"></script>
+    <script type="text/javascript" src="/static/admin/js/vendor/xregexp/xregexp.js"></script> -->
 
     
 
@@ -99,7 +99,7 @@
                            <p class="mt-3">
                               Create an Account <a href="auth-sign-up.html" class="text-primary">Sign Up</a>
                            </p> -->
-                           <!-- {{form.media}} -->
+                           {{form.media}}
                            {{form.as_p}}
                            <button type="submit" class="btn btn-primary">Create Meeting</button>
                         </form>
