--- a/fileupload/templates/fileupload/output.html
+++ b/fileupload/templates/fileupload/output.html
@@ -100,7 +100,7 @@
 <div class="row">
   <div class="col s5">
   </div>
-<a href="/analysis">
+<a href="/analysis/{{eid}}/{{mid}}/">
   Click Here To Analyze Your output.
 </a>
 </div>
