--- a/fileupload/templates/fileupload/index.html
+++ b/fileupload/templates/fileupload/index.html
@@ -663,7 +663,7 @@
                                                 </div>
                                         </form>
                                         <div class="w-commerce-commercecartemptystate empty-state cart-empty-state">
-                                            <div>No items found.</div><a href="/../upload"
+                                            <div>No items found.</div><a href="/../login/"
                                                 class="button-primary cart-empty-state w-button">Get Started</a>
                                         </div>
                                         <div style="display:none" data-node-type="commerce-cart-error"
@@ -709,7 +709,7 @@
                             style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
                             class="_2-buttons"><a data-w-id="68f96fd0-d514-4afb-b422-cfc6a167f222"
                                 style="-webkit-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);background-color:rgb(74,58,255)"
-                                href="/../upload" class="button-primary button-2-buttons w-button">Get Started</a>
+                                href="/../login/" class="button-primary button-2-buttons w-button">Get Started</a>
                         </div>
                     </div>
                     <div data-w-id="aeaf221f-7532-e8bc-711d-2a6176663d23"
@@ -728,9 +728,9 @@
                             class="home-sponsors-text">Prominent Tech-Stack</div>
                         <div class="w-layout-grid home-sponsors-grid">
                             <img src="https://cdn.svgporn.com/logos/django.svg" width="150" 
-                            height="150" data-w-id="55e1cb23-5af6-30da-8757-24c259cae500" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="image home-sponsor"/><img src="https://lh3.googleusercontent.com/proxy/gG7gEAsnvjDK5guc_LWTHtlU_ACpZvKAFaq4p0Xot_RmhT9n05zjsSeSQuCGMVG2IWUNOT47aOJP6K7fq6nkuGljva3BoPY2vAU8hG5nAVk2hO6YkTfcWPk" width="200" 
+                            height="150" data-w-id="55e1cb23-5af6-30da-8757-24c259cae500" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="image home-sponsor"/><img src="https://www.maisonlambot.com/wp-content/uploads/2016/03/js-logo.png" width="200" 
                             height="150" data-w-id="750c77a7-4298-255a-a154-e3ee844678d9" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="image home-sponsor"/><img src="https://cdn.svgporn.com/logos/react.svg" width="150" 
-                            height="150" title="React" data-w-id="025bbe5b-67e9-f2e7-36da-acf45da6e8aa" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="image home-sponsor"/><img src="https://assets.website-files.com/6070f1652108f680c7225195/6074760d3ffc758edbc103a6_logo-4-home-sponsors-conference-x-template.svg" data-w-id="af6a1916-16e9-f2d6-f94b-48b8be0e8adb" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="image home-sponsor"/><img src="https://assets.website-files.com/6070f1652108f680c7225195/6074760e637f9310eea7988b_logo-5-home-sponsors-conference-x-template.svg" data-w-id="150e179f-cf57-4bf2-2d20-7d1c7561c172" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="image home-sponsor"/></div>
+                            height="150" title="React" data-w-id="025bbe5b-67e9-f2e7-36da-acf45da6e8aa" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="image home-sponsor"/><img src="https://w7.pngwing.com/pngs/185/866/png-transparent-html-logo-html-web-design-scalable-graphics-world-wide-web-markup-language-html5-icon-hd-miscellaneous-angle-text.png" data-w-id="af6a1916-16e9-f2d6-f94b-48b8be0e8adb" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="image home-sponsor" height="150"/><img height ="150" src="https://www.logolynx.com/images/logolynx/8c/8cdf4c047e99f7389e76aa4e2e7e2803.png" data-w-id="150e179f-cf57-4bf2-2d20-7d1c7561c172" style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" alt="" class="image home-sponsor"/></div>
                         </div>
                     </div>
                 </div>
@@ -745,35 +745,31 @@
                                 class="split-content home-about-left">
                                 <div class="home-about-1">
                                     <div class="card home-about-info accent">
-                                        <div class="card-home-about-number accent">02</div>
-                                        <div class="card-home-about-text accent">Days</div>
+                                        <div class="card-home-about-number accent">4th</div>
+                                        <div class="card-home-about-text accent">Semester</div>
                                     </div>
                                     <div class="card home-about-info last">
-                                        <div class="card-home-about-number">56</div>
-                                        <div class="card-home-about-text">Talks</div>
+                                        <div class="card-home-about-number">1</div>
+                                        <div class="card-home-about-text">Mini-Project</div>
                                     </div>
                                 </div>
                                 <div class="home-about-2">
                                     <div class="card home-about-info">
-                                        <div class="card-home-about-number">24</div>
-                                        <div class="card-home-about-text">Speakers</div>
+                                        <div class="card-home-about-number">1</div>
+                                        <div class="card-home-about-text">Aim</div>
                                     </div>
                                     <div class="card home-about-info last">
-                                        <div class="card-home-about-number">12</div>
-                                        <div class="card-home-about-text">Sponsors</div>
+                                        <div class="card-home-about-number">Meet The</div>
+                                        <div class="card-home-about-text">Meeting Summarizer</div>
                                     </div>
                                 </div>
                             </div>
                             <div data-w-id="b0a29e58-5316-e8ec-bf5f-9ac7318f7a2e"
                                 style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
                                 class="split-content home-about-right">
-                                <div class="subtitle">About the webapp</div>
-                                <h2 class="title home-about">ADDDDDDDDDDDDDDDD</h2>
-                                <p class="paragraph home-about">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                    Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra
-                                    ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean
-                                    faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
-                                    tristique posuere.</p><a data-w-id="f0bf0fa0-444e-1b3e-c644-0752684d05c4"
+                                <div class="subtitle">About Calendify</div>
+                                <h2 class="title home-about">Calendify</h2>
+                                <p class="paragraph home-about">Calendify aims to serve the buisness community with an solution for their biggest problem i.e. Meeting Scheduling. Calendify is a fully secure managment software with great features.Meeting Scheduling made easy with inbuilt calender, scheduler, transcript generator and summarizer.</p><a data-w-id="f0bf0fa0-444e-1b3e-c644-0752684d05c4"
                                     href="/tickets" class="button-primary w-button">Enter dashboard</a>
                             </div>
                         </div>
@@ -892,8 +888,8 @@
                             class="flex-vc">
                             <div class="_2-buttons"><a data-w-id="0524dc10-c10d-0cf2-e133-891dd2e0abc9"
                                     style="-webkit-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);background-color:rgb(74,58,255)"
-                                    href="/tickets" class="button-primary button-2-buttons w-button">Register</a><a
-                                    href="/speakers" class="button-secondary button-2-buttons w-button">Summarize</a>
+                                    href="../register/" class="button-primary button-2-buttons w-button">Register</a><a
+                                    href="../login/" class="button-secondary button-2-buttons w-button">Login</a>
                             </div>
                         </div>
                     </div>
@@ -952,7 +948,7 @@
                         </div>
                         <div data-w-id="4d8a340c-7738-7d5d-54a3-82e77444cd5f"
                             style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
-                            class="flex-vc"><a data-w-id="872b9516-b354-7ea5-feae-78c18bddbe0d" href="/tickets"
+                            class="flex-vc"><a data-w-id="872b9516-b354-7ea5-feae-78c18bddbe0d" href="/../login/"
                                 class="button-primary w-button">Get Started</a></div>
                     </div>
                 </div>
