--- a/employee/templates/employee/schedule.html
+++ b/employee/templates/employee/schedule.html
@@ -109,12 +109,13 @@
                                       <div class="iq-sub-dropdown dropdown-menu" aria-labelledby="dropdownMenuButton">
                                           <div class="card shadow-none m-0">
                                               <div class="card-body p-0 ">
+                                                  <a href="../../../logout/">
                                                   <div class="cust-title p-3">
-                                                      <h5 class="mb-0">Notifications</h5>
+                                                      <h5 class="mb-0">Logout</h5>
                                                   </div>
-                                                  
+                                                  </a>
                                                   <a class="right-ic btn-block position-relative p-3 border-top text-center" href="#" role="button">
-                                                      See All Notification
+                                                      Logout Now
                                                   </a>
                                               </div>
                                           </div>
