--- a/employee/templates/employee/profile.html
+++ b/employee/templates/employee/profile.html
@@ -42,12 +42,12 @@
                               </div>
                               <ul id="iq-sidebar-toggle" class="iq-menu d-flex">
                                                       <li class=" ">
-                                                          <a href="/dashboard/{{con.id}}/" class="">
+                                                          <a href="../../dashboard/{{con.id}}/" class="">
                                                               <span>Dashboard</span>
                                                           </a>
                                                       </li>
                                                       <li class=" ">
-                                                          <a href="../schedule/" class="">
+                                                          <a href="../../schedule/{{con.id}}/" class="">
                                                               <span>My Schedule</span>
                                                           </a>
                                                       </li>                                                     
