--- a/employee/templates/employee/schedule.html
+++ b/employee/templates/employee/schedule.html
@@ -46,7 +46,7 @@
                               </div>
                               <ul id="iq-sidebar-toggle" class="iq-menu d-flex">
                                                       <li class=" ">
-                                                          <a href="/dashboard/{{con.id}}/" class="">
+                                                          <a href="../../dashboard/{{con.id}}/" class="">
                                                               <span>Dashboard</span>
                                                           </a>
                                                       </li>
@@ -106,6 +106,7 @@
                                           <span class="badge badge-primary count-mail rounded-circle">2</span>
                                           <span class="bg-primary"></span>
                                       </a>
+                                      <a href="../../../logout/">
                                       <div class="iq-sub-dropdown dropdown-menu" aria-labelledby="dropdownMenuButton">
                                           <div class="card shadow-none m-0">
                                               <div class="card-body p-0 ">
@@ -120,6 +121,7 @@
                                               </div>
                                           </div>
                                       </div>
+                                      </a>
                                   </li>
                                   <li class="caption-content">
                                       <a href="/profile/{{con.id}}/" class="search-toggle dropdown-toggle d-flex align-items-center" id="dropdownMenuButton3" data-toggle="dropdown"
