--- a/fileupload/templates/fileupload/output.html
+++ b/fileupload/templates/fileupload/output.html
@@ -76,7 +76,7 @@
       href="/" aria-current="page" class="brand-2 w-nav-brand w--current">
       <div class="nav-logo">
         <img src="https://assets.website-files.com/5beac993c16eeddf6a0d6822/5c0aa9317bb4f246675244fc_outlaw-logo256x256.png" width="40" alt=""/></div>
-        <div class="nav-logo-text">outlaw</div>
+        <div class="nav-logo-text">Calendify</div>
     </a>
     <nav role="navigation" class="nav-menu-3 w-nav-menu"><a href="/dashboard/{{eid}}/" class="nav-link-2 w-nav-link">Dashboard</a>
       <a href="/scheduler/{{eid}}/" class="nav-link-2 w-nav-link">Scheduler</a>
