--- a/fileupload/templates/fileupload/index.html
+++ b/fileupload/templates/fileupload/index.html
@@ -643,7 +643,7 @@
                                         class="card speaker w-inline-block">
                                         <!-- <div class="card-speaker-rol">Lead Marketer at Google</div> -->
                                         <div class="image-wrapper card-speaker">
-                                            <img src="{% static 'oculusTR.png'%}" alt="" class="image card-speaker"/></div>
+                                            <img src="{% static 'OculusTR.png'%}" alt="" class="image card-speaker"/></div>
                                             <h3 class="title card-speaker">Vedant Gaonkar</h3>
                                             <div class="card-speaker-icon-wrapper">
                                                 <div class="card-speaker-icon">
